[package]
name = "zyou_delivery"
version = "0.1.0"
edition = "2021"
description = "A Rust SDK for interacting with shipping carrier APIs"
license = "MIT"
repository = "https://github.com/zyouax/zyou_delivery"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
base64 = "0.22"
retry = "2.0"
async-trait = "0.1"
log = "0.4"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
mockito = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["colissimo"]
colissimo = ["colissimo"]
fedex = ["fedex"]
ups = ["ups"]
tnt = ["tnt"]
chronopost = ["chronopost"]
mondialrelay = ["mondialrelay"]
all = ["colissimo", "fedex", "ups", "tnt", "chronopost", "mondialrelay"]